# new-editor

./: Cargo.toml  README.md  index.html
src/: main.rs
src/components/: sidebar.rs
src/config/: workbench.rs
src/event_loops/: core.rs
src/schemas/: workbench.rs
